corrections blocs alignés

--- a/faq-retours.css
+++ b/faq-retours.css
@@ -9,7 +9,7 @@
 
 /* ----- Main ----- */
 main{
-    width: 80%;
+    width: 93.75%;
     margin: auto;
     max-width: 1280px;
     color: #403038;
@@ -90,9 +90,13 @@ ul li.active{
     width: 100%;
     padding: 10px 0px;
 }
+.profil li:last-child{
+    margin-right: 0;
+}
 
 .contRetours{
     display: flex;
+    margin: auto;
     width: 100%;
     font-size: 0.8rem;
     margin-bottom: 80px;
@@ -104,7 +108,7 @@ ul li.active{
 }
 
 .bloc:first-of-type {
-    margin: 0 20px 0;
+    margin-right: 20px;
 }
 
 .qr {
